trunk/Archive2/a1/a5c420c621b5f7/output
clang version 3.5.0 (tags/RELEASE_350/final 217394)
Target: x86_64-unknown-linux-gnu
Thread model: posix
main.cpp:5:1: error: cannot combine with previous 'type-name' declaration specifier
struct foo;
^
main.cpp:5:11: error: expected ',' or '>' in template-parameter-list
struct foo;
          ^
main.cpp:5:11: warning: declaration does not declare anything [-Wmissing-declarations]
struct foo;
          ^
1 warning and 2 errors generated.
